make xrandr command use an actual option

--- a/po/cs.po
+++ b/po/cs.po
@@ -7051,11 +7051,11 @@ msgstr ""
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1182
 #, fuzzy
-msgid "Restore setup on start"
+msgid "Restore on start"
 msgstr "Uzamknout při spuštění"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1191
-msgid "Monitor hotplug"
+msgid "Hotplug"
 msgstr ""
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1200
