--- a/po/de.po
+++ b/po/de.po
@@ -7026,11 +7026,11 @@ msgid "Response"
 msgstr ""
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1182
-msgid "Restore setup on start"
+msgid "Restore on start"
 msgstr "Wiederherstellen nach start"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1191
-msgid "Monitor hotplug"
+msgid "Hotplug"
 msgstr "Neue Monitore"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1200
