--- a/po/ka.po
+++ b/po/ka.po
@@ -6687,11 +6687,11 @@ msgid "Response"
 msgstr "პასუხი"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1182
-msgid "Restore setup on start"
+msgid "Restore on start"
 msgstr ""
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1191
-msgid "Monitor hotplug"
+msgid "Hotplug"
 msgstr "ეკრანის ჩართულზე მიერთება"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1200
