--- a/po/sr.po
+++ b/po/sr.po
@@ -6933,11 +6933,11 @@ msgid "Response"
 msgstr "Одзив"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1182
-msgid "Restore setup on start"
+msgid "Restore on start"
 msgstr "Поврати поставке на почетку"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1191
-msgid "Monitor hotplug"
+msgid "Hotplug"
 msgstr "Надгледај прикључења"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1200
