--- a/po/fi.po
+++ b/po/fi.po
@@ -6954,11 +6954,11 @@ msgid "Response"
 msgstr ""
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1182
-msgid "Restore setup on start"
+msgid "Restore on start"
 msgstr "Palauta asetukset käynnistyksessä"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1191
-msgid "Monitor hotplug"
+msgid "Hotplug"
 msgstr ""
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1200
