--- a/po/fr_CH.po
+++ b/po/fr_CH.po
@@ -7481,11 +7481,11 @@ msgstr ""
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1182
 #, fuzzy
-msgid "Restore setup on start"
+msgid "Restore on start"
 msgstr "Restauration de la Résolution au Démarrage"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1191
-msgid "Monitor hotplug"
+msgid "Hotplug"
 msgstr ""
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1200
