--- a/po/nb.po
+++ b/po/nb.po
@@ -7427,11 +7427,11 @@ msgstr ""
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1182
 #, fuzzy
-msgid "Restore setup on start"
+msgid "Restore on start"
 msgstr "Gjenopprett oppløsningen ved oppstart"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1191
-msgid "Monitor hotplug"
+msgid "Hotplug"
 msgstr ""
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1200
