--- a/po/sl.po
+++ b/po/sl.po
@@ -7015,11 +7015,11 @@ msgid "Response"
 msgstr ""
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1182
-msgid "Restore setup on start"
+msgid "Restore on start"
 msgstr "Obnovi nastavitev ob zagonu"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1191
-msgid "Monitor hotplug"
+msgid "Hotplug"
 msgstr "Monitorjev priključek"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1200
