--- a/po/tr.po
+++ b/po/tr.po
@@ -7004,11 +7004,11 @@ msgstr ""
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1182
 #, fuzzy
-msgid "Restore setup on start"
+msgid "Restore on start"
 msgstr "Başlangıçta yenile"
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1191
-msgid "Monitor hotplug"
+msgid "Hotplug"
 msgstr ""
 
 #: src/modules/conf_randr/e_int_config_randr2.c:1200
