Updating all po files

--- a/po/it.po
+++ b/po/it.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Enlightenment\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-28 15:02+0100\n"
-"PO-Revision-Date: 2023-12-28 15:12+0100\n"
+"POT-Creation-Date: 2024-01-23 21:51+0100\n"
+"PO-Revision-Date: 2024-01-23 21:53+0100\n"
 "Last-Translator: Massimo Maiurana <maiurana@gmail.com>\n"
 "Language-Team: General\n"
 "Language: it\n"
@@ -41,15 +41,11 @@ msgstr "Enlightenment"
 
 #: src/bin/e_about.c:26
 msgid ""
-"<title>Copyright &copy; 2000-2022, by the Enlightenment Development Team</"
+"<title>Copyright &copy; 2000-2024, by the Enlightenment Development Team</"
 "><ps/><ps/>We hope you enjoy using this software as much as we enjoyed "
 "writing it.<ps/><ps/>To contact us please visit:<ps/><hilight>http://www."
 "enlightenment.org</><ps/><ps/>"
-msgstr ""
-"<title>Copyright &copy; 2000-2022, dell'Enlightenment Development Team.</"
-"><ps/><ps/>Ci auguriamo che vi piacerà usare questo software tanto quanto a "
-"noi è piaciuto scriverlo.<ps/><ps/>Per contattarci visitate:<ps/"
-"><hilight>http://www.enlightenment.org</><ps/><ps/>"
+msgstr "<title>Copyright &copy; 2000-2024, dell'Enlightenment Development Team.</><ps/><ps/>Ci auguriamo che vi piacerà usare questo software tanto quanto a noi è piaciuto scriverlo.<ps/><ps/>Per contattarci visitate:<ps/><hilight>http://www.enlightenment.org</><ps/><ps/>"
 
 #: src/bin/e_about.c:69
 msgid "<title>The Team</><ps/><ps/>"
