--- a/po/ja.po
+++ b/po/ja.po
@@ -8,13 +8,14 @@ msgstr ""
 "Project-Id-Version: Enlightenment DR17\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-01-23 21:51+0100\n"
-"PO-Revision-Date: 2011-01-06 16:45+0900\n"
+"PO-Revision-Date: 2024-12-04 23:41+0100\n"
 "Last-Translator: Yasufumi Haga <yasufumi.haga@nifty.com>\n"
 "Language-Team: E17-jp <LL@li.org>\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: src/bin/e_about.c:17
 msgid "About Enlightenment"
@@ -1537,7 +1538,7 @@ msgstr "%s が突然停止しました。"
 #: src/bin/e_exec.c:1059
 #, c-format
 msgid "An exit code of %i was returned from %s."
-msgstr "終了コード %1$i が %s より返りました。"
+msgstr "終了コード %i が %s より返りました。"
 
 #: src/bin/e_exec.c:1067
 #, c-format
@@ -1950,7 +1951,7 @@ msgstr "%s はすでに存在します!"
 #: src/bin/e_fm.c:10550 src/bin/e_fm.c:10587
 #, c-format
 msgid "%s could not be renamed because it is protected"
-msgstr "s は保護されているので、名前を変更できません。"
+msgstr "%s は保護されているので、名前を変更できません。"
 
 #: src/bin/e_fm.c:10554 src/bin/e_fm.c:10591
 #, fuzzy
