--- a/po/ja.po
+++ b/po/ja.po
@@ -1,21 +1,26 @@
-# This is the Japanese locale definition for Enlightenment DR 17
+# Japanese translation for Enlightenment DR 17
 # This file is put in the public domain.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2000-2017.
 #   David Stevenson <david.35472@gmail.com>
+#
+# e-taro, 2007
+# Yasufumi Haga <yasufumi.haga@nifty.com>, 2007
+# Aron Xu <aronmalache@163.com>, 2009.
+# Green <usergreen@users.osdn.me>, 2024
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Enlightenment DR17\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-01-23 21:51+0100\n"
-"PO-Revision-Date: 2024-12-04 23:41+0100\n" 
-"Last-Translator: Yasufumi Haga <yasufumi.haga@nifty.com>\n"
+"PO-Revision-Date: 2024-12-04 23:41+0100\n"
+"Last-Translator: Green <usergreen@users.osdn.me>\n"
 "Language-Team: E17-jp <LL@li.org>\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n" 
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: src/bin/e_about.c:17
 msgid "About Enlightenment"
